src/serve/tests/requests/update/obj/snapshots/basiliq__serve__tests__requests__update__obj__include__include_single_rel_sparsing_none.snap
---
source: basiliq/src/serve/tests/requests/update/obj/include.rs
expression: res

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "data": {
    "type": "public__peoples",
    "id": "[uuid]",
    "attributes": {
      "age": 100,
      "first-name": "Francis",
      "gender": "M",
      "last-name": "Le Roy",
      "twitter": null
    },
    "relationships": {
      "public__favorite_color": {
        "data": {
          "type": "public__favorite_color",
          "id": "[uuid]"
        }
      }
    }
  },
  "included": [
    {
      "type": "public__favorite_color",
      "id": "[uuid]"
    }
  ]
}
